We allow repository to restart without a start point SCN
In the repository we simply start reading files in the S3 bucket

--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/main.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/main.yml
@@ -8,10 +8,11 @@
 #     table on the client.
 - name: Validate Restart Parameters
   fail:
-    msg: "When restarting, the lower bound SCN for audited interaction, and lower bound date for User replication must be provided"
+    msg: "When restarting a replication client, the lower bound SCN for audited interaction, and lower bound date for User replication must be provided"
   when:
     - replication_action == 'restart'
     - audit_cdc_scn == ''
+    - audited_interaction_client
 
 - name: Get Replication Task Details
   include_tasks: get_task_details.yml
