--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/main.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/main.yml
@@ -17,7 +17,7 @@
 - name: Get Replication Task Details
   include_tasks: get_task_details.yml
 
-# If we do not find an Audited Interaction replication taks then this environment is not configured as a client or repository
+# If we do not find an Audited Interaction replication tasks then this environment is not configured as a client or repository
 # and no further action is needed
 - name: Skip Message
   debug:
