--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/restart_tasks.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/restart_tasks.yml
@@ -1,5 +1,5 @@
 # When restarting a Client replication we must ensure we have all the required
-# redo logs available on the host to cover the perido since the start SCN
+# redo logs available on the host to cover the period since the start SCN
 - name: Restore Archivelogs
   when: audited_interaction_client
   block:
