--- a/.github/workflows/oracle-db-password-rotation-schedule.yml
+++ b/.github/workflows/oracle-db-password-rotation-schedule.yml
@@ -3,6 +3,7 @@ on:
   schedule:
     - cron: '00 12 * * TUE'
     - cron: '00 14 * * TUE'
+    - cron: '00 16 * * TUE'
     - cron: '00 10 * * THU'
     - cron: '00 14 * * THU'
     - cron: '00 16 * * WED'
