--- a/playbooks/oracle_audit_replication_management/playbook.yml
+++ b/playbooks/oracle_audit_replication_management/playbook.yml
@@ -1,14 +1,39 @@
 ---
+- hosts: localhost
+  gather_facts: no
+  become: no
+
+  tasks:
+    - name: Check if this is an Audit Client
+      delegate_to: localhost
+      become: no
+      block:
+        - include_role:
+            name: oracle_audit_replication_management
+            tasks_from: is_audit_client.yml
+          vars:
+            region: eu-west-2
+
+    - name: Show if Audited Interaction Client
+      debug:
+        msg: "Audited Interaction Client: {{ audited_interaction_client }}"
+
 - hosts: "{{ target_hosts }}"
   gather_facts: no
   become: true
   become_user: oracle
 
-  # We run this
-
   tasks:
+    # Use previous localhost check if this is an audited interaction client environment
+    - name: Set if this an Audited Interaction Client Environment
+      set_fact:
+        audited_interaction_client: "{{ hostvars['localhost']['audited_interaction_client'] }}"
+
+    # We want the audit from the startup SCN but only for the client environments
     - name: Get Restart Point
-      when: replication_action == 'restart'
+      when:
+        - audited_interaction_client
+        - replication_action == 'restart'
       block:
         - name: Get Database Startup SCN
           script: ../../common/files/get_db_startup_scn.sh
@@ -24,12 +49,14 @@
           register: get_max_seq
           changed_when: false
 
-# Prior to restarting the replication tasks we take a backup of all archivelogs
+# Prior to restarting the replication tasks in a client environment we take a backup of all archivelogs
 # so that we can restore them onto the standby database used by DMS to ensure
 # it can read all changes since resetlogs
 - name: Backup Archivelogs
   import_playbook: ../oracle_backup/backup.yml
-  when: replication_action == 'restart'
+  when:
+    - audited_interaction_client
+    - replication_action == 'restart'
   vars:
     rman_target: "{{ target_hosts }}"
     json_inputs: {}
@@ -54,4 +81,4 @@
           vars:
             replication_action: restart
             audit_cdc_scn: "{{ get_db_startup_scn.stdout | default('') | trim }}"
-            max_seqno: "{{ ( get_max_seq.stdout | trim ) if (replication_action == 'restart') else 'NOT_APPLICABLE' }}"
+            max_seqno: "{{ ( get_max_seq.stdout | trim ) if (audited_interaction_client and replication_action == 'restart') else 'NOT_APPLICABLE' }}"
