--- a/playbooks/oracle_release_update/oracle_release_update/tasks/main.yml
+++ b/playbooks/oracle_release_update/oracle_release_update/tasks/main.yml
@@ -17,21 +17,30 @@
     msg: "Invalid Apply Mode {{ apply_mode }}"
   when: not apply_mode in ['prepare-clone','switch-clone','apply-ojvm-standby']
 
+- name: Get Database Role
+  script: ../../common/files/get_database_role.sh
+  register: getdatabaserole
+  changed_when: false
+
 - name: Set Database Role (Primary)
   set_fact:
     database_role: primary
-  when: database_primary_sid is defined
+  when: getdatabaserole.stdout | trim == 'PRIMARY'
   tags: always
 
 - name: Set Database Role (Standby)
   set_fact:
     database_role: standby
-  when: database_standby_sid is defined
+  when: getdatabaserole.stdout | trim == 'PHYSICAL STANDBY'
   tags: always
+
+- fail:
+    msg: "Database role of {{ getdatabaserole.stdout }} is not supported for patching."
+  when: database_role is not defined
 
 - name: Find the name of the Primary Host Group
   set_fact:
-    primary_host_group: "{{ ( (group_names | select('match','.*_standbydb\\d+')) if (database_role == 'standby') else (group_names | select('match','.*_primarydb')) ) | list | first | regex_replace('^(.*)_standbydb\\d+', '\\1_primarydb') }}"
+    primary_host_group: "{{ ( (group_names | select('match','.*_standbydb\\d+')) if (database_standby_sid is defined) else (group_names | select('match','.*_primarydb')) ) | list | first | regex_replace('^(.*)_standbydb\\d+', '\\1_primarydb') }}"
 
 # Now get the primary Hostname
 - name: Get Hostname of Primary
