--- a/playbooks/oracle_release_update/oracle_release_update/tasks/install_ojvm_ru.yml
+++ b/playbooks/oracle_release_update/oracle_release_update/tasks/install_ojvm_ru.yml
@@ -2,18 +2,24 @@
 # Detect if OJVM Patch has been applied to the Primary database.
 # The OJVM patch is not certified for Standby First deployment so it must be installed there prior to installing on the standby databases.
 - name: Check OJVM Has Been Installed on Primary
-  when: database_role != "primary"
+  when: 
+      - database_role != "primary"
+      - not intended_primary
   block:
     - name: Check for OJVM Installation on Primary
       script: get_ojvm_patch_check.sh {{ ojvm_patch_id }}
       changed_when: false
       register: get_ojvm_patch_check
       delegate_to: "{{ primary_host }}"
+      args:
+         executable: /bin/bash
 
+    # From Oracle 26ai onwards, we can install the OJVM patch on the standby first -
+    # this code should be amended after upgrading from 19c to a later release.
     - name: Abort Installation if Attempt to Install on Standby Ahead of Primary
       fail:
         msg: "OJVM Patch {{ ojvm_patch_id }} is Not Standby First Certified.  Install on Primary First."
-      when: not get_ojvm_patch_check is search('.*SUCCESS.*')
+      when: get_ojvm_patch_check.stdout is not search('SUCCESS')
 
 - name: Check if OJVM Already Installed
   shell: |
@@ -22,6 +28,8 @@
   register: patch_check
   failed_when: patch_check.rc > 1
   changed_when: false
+  args:
+         executable: /bin/bash
 
 - name: Show Install Status
   debug: var=patch_check.rc
@@ -67,6 +75,8 @@
       async: 2400
       poll: 0
       register: run_ojvm_patch
+      args:
+         executable: /bin/bash
 
     - name: Wait for OJVM Patch Install
       async_status:
@@ -75,33 +85,16 @@
       until: result.finished
       retries: 80
       delay: 30
+      failed_when: result.rc != 0
 
-    - name: Startup Primary Database in Upgrade Mode for Datapatch
-      script: startup_database_upgrade.sh
-      when: database_role == "primary"
-
-    - name: Run Datapatch on Primary
-      shell: |
-        . ~/.bash_profile
-        cd {{ target_db_home }}/OPatch
-        ./datapatch -verbose
-      register: datapatch
-      when: database_role == "primary"
-      async: 1800
-      poll: 60
-      failed_when: datapatch.rc !=0 or datapatch.stdout is search('command failed with errors')
-
-    - name: Show Datapatch Output
-      debug: var=datapatch.stdout_lines
-      when: database_role == "primary"
-
-    - name: Shutdown Primary Database
-      include_tasks: shutdown_database.yml
-      when: database_role == "primary"
-
+    # We may run Datapatch against an open database (do not need to do a Startup Upgrade)
     - name: Startup Database for Normal Use
       include_tasks: startup_database.yml
       when: (database_role != 'primary' and standby_db_configured) or (database_role == 'primary')
+
+    - name: Run Datapatch if Primary
+      import_tasks: run_datapatch.yml
+      when: database_role == "primary"
 
     # Enable Active Data Guard if Required after install on Standby
     - name: Enable ADG
@@ -113,4 +106,4 @@
         - active_data_guard | default(false) | bool
         - standby_db_configured
 
-  when: "patch_check.rc == 1"
+  when: patch_check.rc == 1
